# torch-kge-kernels

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: parity_results.md  reasoner_parity_baselines.md  reproducibility.json  reproducibility.md  tkk_ns_consolidation_status.md
examples/: 01_sbr_exhaustive.py  02_train_kge.py  03_filtered_eval.py  README.md
scripts/: build_reproducibility.py  generate_soft_facts.py  profile_train.py  run_3way_sweep.py  run_reasoner_parity_sweep.py  train.py
src/kge_kernels/: __init__.py  adapter.py  partial.py  ranking.py  sampler.py  scoring.py  training_sampling.py  types.py  utils.py
src/kge_kernels/cli/: __init__.py  runner.py
src/kge_kernels/data/: __init__.py  handler.py  knowledge_base.py  loaders.py  paths.py  transforms.py
src/kge_kernels/eval/: __init__.py  candidates.py  checkpoint.py  eval_hooks.py  evaluate.py  evaluator.py  filtered.py  fusion.py  pool.py  ranking.py  ranking_evaluator.py  results.py  scoring.py  unified.py
src/kge_kernels/framework/: README.md  __init__.py  atom_classification.py  atom_repr.py  protocols.py  query_repr.py  repr.py  repr_atom.py  repr_query.py  repr_query_pool.py  repr_state.py  repr_state_rule.py  repr_traj.py  repr_traj_rule.py  scorer.py  select.py  state_repr.py  traj_repr.py  types.py
src/kge_kernels/inference/: __init__.py  loader.py
src/kge_kernels/logging/: __init__.py  config.py  context.py  layout.py  runner.py
src/kge_kernels/losses/: __init__.py  (+2 more)
src/torch_kge_kernels.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_checkpoints.py  test_eval.py  test_examples.py  test_filtered_ranking.py  test_helpers.py  test_inference.py  test_logging.py  test_partial.py  test_ranking.py  test_ranking_streaming.py  test_sampler.py  test_scoring.py
tests/data/: test_data.py  test_handler.py
tests/framework/: conftest.py  test_atom_repr.py  test_compile_safety.py  test_policy_rollout_query_repr.py  test_proof_traj_repr.py  test_query_repr.py  test_repr.py  test_rule_traj_repr.py  test_scorer.py  test_select.py  test_state_repr.py  test_traj_repr.py  test_trajectory_score_query_repr.py
tests/losses/: test_losses.py
tests/models/: test_kge_models.py
tests/search/: test_method_tuples.py  test_proof_scorer.py  test_searcher.py  test_unified_searcher.py
tests/training/: test_batching.py  test_training.py
(+47 files in other folders)
